<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip">
        <!--  View Title Label -->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/login"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"/>
        <!--  User Name Label -->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"/>
        <!--  User Name TextField -->
        <EditText
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inserisci_il_nome_utente"
                android:inputType="text"
                android:maxLines="1"/>

        <!--  Password Label -->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/password"/>
        <!--  Password TextField -->
        <EditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inserisci_la_password"
                android:inputType="textPassword"
                android:maxLines="1"/>

        <!--  Login Button -->
        <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/colorAccent"
                android:textColor="#ffffff"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:text="@string/login"
                android:focusable="true"/>
    </LinearLayout>

</ScrollView>