<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:id="@+id/tv_nomeLibro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/titolo"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/tv_autoreLibro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/autore"
            app:layout_constraintStart_toStartOf="@+id/tv_nomeLibro"
            app:layout_constraintTop_toBottomOf="@+id/tv_nomeLibro" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:id="@+id/tv_editoreLibro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/editore"
            app:layout_constraintStart_toEndOf="@+id/tv_autoreLibro"
            app:layout_constraintTop_toBottomOf="@+id/tv_nomeLibro"
            app:layout_constraintBottom_toBottomOf="@+id/tv_autoreLibro"/>

    <TextView
            android:id="@+id/tv_idLibro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/id_libro"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tv_nomeLibro"
            app:layout_constraintBottom_toBottomOf="@+id/tv_autoreLibro"/>

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/id"
            app:layout_constraintStart_toEndOf="@+id/tv_editoreLibro"
            app:layout_constraintTop_toBottomOf="@+id/tv_nomeLibro"
            app:layout_constraintBottom_toBottomOf="@+id/tv_autoreLibro"/>

</android.support.constraint.ConstraintLayout>
