<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:id="@+id/tv_restituisci_libro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/restituisci_un_libro"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <!-- displays the loading animation while downloading the listview -->
    <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"/>
    </RelativeLayout>

    <ListView
            android:id="@+id/lv_restituisci"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_restituisci"/>

    <TextView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/empty_restituzione"
            android:textAlignment="center"
            android:textSize="18sp"
            android:visibility="gone"/>
    <TextView
            android:text="@string/tocca_un_libro_per_restituirlo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_restituisci" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_restituisci_libro"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:textSize="18sp"
            android:textColor="@android:color/black"/>

</android.support.constraint.ConstraintLayout>